added data validation and error handeling
